# openapi.yaml
@@ -89,23 +89,6 @@ paths:
         default:
           $ref: '#/responses/InternalServerError'
 
-  /api/v1/log/timestampCertChain:
-    get:
-      summary: Retrieve the certfiicate chain for timestamping that can be used to validate trusted timestamps
-      description: Returns the certfiicate chain for timestamping that can be used to validate trusted timestamps
-      operationId: getTimestampCertChain
-      tags:
-        - timestamp
-      produces:
-        - application/x-pem-file
-      responses:
-        200:
-          description: The PEM encoded cert chain
-          schema:
-            type: string
-        default:
-          $ref: '#/responses/InternalServerError'
-
   /api/v1/log/proof:
     get:
       summary: Get information required to generate a consistency proof for the transparency log
@@ -242,7 +225,7 @@ paths:
         default:
           $ref: '#/responses/InternalServerError'
   
-  /api/v1/tsr:
+  /api/v1/timestamp:
     post:
       # TODO: Add uploads to transparency log.
       summary: Returns a timestamp response generated by Rekor
@@ -250,22 +233,42 @@ paths:
       tags:
         - timestamp
       consumes:
-        - application/json
+        - application/timestamp-query
       produces:
-        - application/json
+        - application/timestamp-reply
       parameters:
         - in: body
-          name: query
+          name: request
           required: true
           schema:
-            $ref: '#/definitions/TimestampRequest'
+            type: string
+            format: binary
       responses:
         200:
           description: Returns a timestamp response 
           schema:
-            $ref:  '#/definitions/TimestampResponse'
+            type: string
+        404:
+          $ref: '#/responses/NotFound'
         400:
           $ref: '#/responses/BadContent'
+        default:
+          $ref: '#/responses/InternalServerError'
+
+  /api/v1/timestamp/certchain:
+    get:
+      summary: Retrieve the certfiicate chain for timestamping that can be used to validate trusted timestamps
+      description: Returns the certfiicate chain for timestamping that can be used to validate trusted timestamps
+      operationId: getTimestampCertChain
+      tags:
+        - timestamp
+      produces:
+        - application/x-pem-file
+      responses:
+        200:
+          description: The PEM encoded cert chain
+          schema:
+            type: string
         default:
           $ref: '#/responses/InternalServerError'
 
@@ -491,22 +494,6 @@ definitions:
       - rootHash
       - treeSize
       - hashes
-
-  TimestampRequest:
-    type: object
-    properties:
-      rfcRequest:
-        description: RFC 3161 formatted timestamp request
-        type: string
-        format: byte
-
-  TimestampResponse:
-    type: object
-    properties:
-      rfcResponse:
-        type: string
-        description: RFC 3161 formatted timestamp response
-        format: byte
 
   Error:
     type: object
