# pkg/generated/restapi/configure_rekor_server.go
@@ -71,6 +71,8 @@ func configureAPI(api *operations.RekorServerAPI) http.Handler {
 	api.YamlProducer = util.YamlProducer()
 
 	api.ApplicationXPemFileProducer = runtime.TextProducer()
+	api.ApplicationTimestampQueryConsumer = runtime.TextConsumer()
+	api.ApplicationTimestampReplyProducer = runtime.TextProducer()
 
 	api.EntriesCreateLogEntryHandler = entries.CreateLogEntryHandlerFunc(pkgapi.CreateLogEntryHandler)
 	api.EntriesGetLogEntryByIndexHandler = entries.GetLogEntryByIndexHandlerFunc(pkgapi.GetLogEntryByIndexHandler)
@@ -100,11 +102,11 @@ func configureAPI(api *operations.RekorServerAPI) http.Handler {
 	api.AddMiddlewareFor("GET", "/api/v1/log/proof", middleware.NoCache)
 	api.AddMiddlewareFor("GET", "/api/v1/log/entries", middleware.NoCache)
 	api.AddMiddlewareFor("GET", "/api/v1/log/entries/{entryUUID}", middleware.NoCache)
-	api.AddMiddlewareFor("GET", "/api/v1/tsr", middleware.NoCache)
+	api.AddMiddlewareFor("GET", "/api/v1/timestamp", middleware.NoCache)
 
 	// cache forever
 	api.AddMiddlewareFor("GET", "/api/v1/log/publicKey", cacheForever)
-	api.AddMiddlewareFor("GET", "/api/v1/log/timestampCertChain", cacheForever)
+	api.AddMiddlewareFor("GET", "/api/v1/log/timestamp/certchain", cacheForever)
 
 	return setupGlobalMiddleware(api.Serve(setupMiddlewares))
 }
