# pkg/generated/restapi/operations/rekor_server_api.go
@@ -62,9 +62,15 @@ func NewRekorServerAPI(spec *loads.Document) *RekorServerAPI {
 		APIKeyAuthenticator: security.APIKeyAuth,
 		BearerAuthenticator: security.BearerAuth,
 
+		ApplicationTimestampQueryConsumer: runtime.ConsumerFunc(func(r io.Reader, target interface{}) error {
+			return errors.NotImplemented("applicationTimestampQuery consumer has not yet been implemented")
+		}),
 		JSONConsumer: runtime.JSONConsumer(),
 		YamlConsumer: yamlpc.YAMLConsumer(),
 
+		ApplicationTimestampReplyProducer: runtime.ProducerFunc(func(w io.Writer, data interface{}) error {
+			return errors.NotImplemented("applicationTimestampReply producer has not yet been implemented")
+		}),
 		ApplicationXPemFileProducer: runtime.ProducerFunc(func(w io.Writer, data interface{}) error {
 			return errors.NotImplemented("applicationXPemFile producer has not yet been implemented")
 		}),
@@ -129,6 +135,9 @@ type RekorServerAPI struct {
 	// It has a default implementation in the security package, however you can replace it for your particular usage.
 	BearerAuthenticator func(string, security.ScopedTokenAuthentication) runtime.Authenticator
 
+	// ApplicationTimestampQueryConsumer registers a consumer for the following mime types:
+	//   - application/timestamp-query
+	ApplicationTimestampQueryConsumer runtime.Consumer
 	// JSONConsumer registers a consumer for the following mime types:
 	//   - application/json
 	JSONConsumer runtime.Consumer
@@ -136,6 +145,9 @@ type RekorServerAPI struct {
 	//   - application/yaml
 	YamlConsumer runtime.Consumer
 
+	// ApplicationTimestampReplyProducer registers a producer for the following mime types:
+	//   - application/timestamp-reply
+	ApplicationTimestampReplyProducer runtime.Producer
 	// ApplicationXPemFileProducer registers a producer for the following mime types:
 	//   - application/x-pem-file
 	ApplicationXPemFileProducer runtime.Producer
@@ -235,6 +247,9 @@ func (o *RekorServerAPI) RegisterFormat(name string, format strfmt.Format, valid
 func (o *RekorServerAPI) Validate() error {
 	var unregistered []string
 
+	if o.ApplicationTimestampQueryConsumer == nil {
+		unregistered = append(unregistered, "ApplicationTimestampQueryConsumer")
+	}
 	if o.JSONConsumer == nil {
 		unregistered = append(unregistered, "JSONConsumer")
 	}
@@ -242,6 +257,9 @@ func (o *RekorServerAPI) Validate() error {
 		unregistered = append(unregistered, "YamlConsumer")
 	}
 
+	if o.ApplicationTimestampReplyProducer == nil {
+		unregistered = append(unregistered, "ApplicationTimestampReplyProducer")
+	}
 	if o.ApplicationXPemFileProducer == nil {
 		unregistered = append(unregistered, "ApplicationXPemFileProducer")
 	}
@@ -311,6 +329,8 @@ func (o *RekorServerAPI) ConsumersFor(mediaTypes []string) map[string]runtime.Co
 	result := make(map[string]runtime.Consumer, len(mediaTypes))
 	for _, mt := range mediaTypes {
 		switch mt {
+		case "application/timestamp-query":
+			result["application/timestamp-query"] = o.ApplicationTimestampQueryConsumer
 		case "application/json":
 			result["application/json"] = o.JSONConsumer
 		case "application/yaml":
@@ -330,6 +350,8 @@ func (o *RekorServerAPI) ProducersFor(mediaTypes []string) map[string]runtime.Pr
 	result := make(map[string]runtime.Producer, len(mediaTypes))
 	for _, mt := range mediaTypes {
 		switch mt {
+		case "application/timestamp-reply":
+			result["application/timestamp-reply"] = o.ApplicationTimestampReplyProducer
 		case "application/x-pem-file":
 			result["application/x-pem-file"] = o.ApplicationXPemFileProducer
 		case "application/json":
@@ -403,11 +425,11 @@ func (o *RekorServerAPI) initHandlerCache() {
 	if o.handlers["GET"] == nil {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
-	o.handlers["GET"]["/api/v1/log/timestampCertChain"] = timestamp.NewGetTimestampCertChain(o.context, o.TimestampGetTimestampCertChainHandler)
+	o.handlers["GET"]["/api/v1/timestamp/certchain"] = timestamp.NewGetTimestampCertChain(o.context, o.TimestampGetTimestampCertChainHandler)
 	if o.handlers["POST"] == nil {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
-	o.handlers["POST"]["/api/v1/tsr"] = timestamp.NewGetTimestampResponse(o.context, o.TimestampGetTimestampResponseHandler)
+	o.handlers["POST"]["/api/v1/timestamp"] = timestamp.NewGetTimestampResponse(o.context, o.TimestampGetTimestampResponseHandler)
 	if o.handlers["POST"] == nil {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
