# pkg/generated/restapi/operations/timestamp/get_timestamp_response.go
@@ -45,7 +45,7 @@ func NewGetTimestampResponse(ctx *middleware.Context, handler GetTimestampRespon
 	return &GetTimestampResponse{Context: ctx, Handler: handler}
 }
 
-/* GetTimestampResponse swagger:route POST /api/v1/tsr timestamp getTimestampResponse
+/* GetTimestampResponse swagger:route POST /api/v1/timestamp timestamp getTimestampResponse
 
 Returns a timestamp response generated by Rekor
 
